--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
         <link href="img/favicon_io/favicon.ico" rel="icon">
-        <link rel="apple-touch-icon" sizes="180x180" href="img/favicon_io/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="img/favicon_io/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="img/favicon_io/favicon-16x16.png">
-        <link rel="manifest" href="img/favicon_io/site.webmanifest">
+        <link rel="apple-touch-icon" sizes="180x180" src="img/favicon_io/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" src="img/favicon_io/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" src="img/favicon_io/favicon-16x16.png">
+        <link rel="manifest" src="img/favicon_io/site.webmanifest">
         <a href="index.html" class="navbar-brand d-flex align-items-center border-end px-4 px-lg-5">
-            <h2 class="m-0 text-primary-title">Nooq 7Energy</h2>
+            <h2 class="m-0 text-primaryb">Nooq 7Energy</h2>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
