--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
 
     <!-- Feature Start -->
-    <div class="container-xxl py-5">
+    <!-- <div class="container-xxl py-5">
         <div class="container">
             <div class="row g-5">
                 <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.1s">
@@ -209,7 +209,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Feature Start -->
 
 
