--- a/index.html
+++ b/index.html
@@ -225,11 +225,12 @@
                 <div class="col-lg-6 about-text py-5 wow fadeIn" data-wow-delay="0.5s">
                     <div class="p-lg-5 pe-lg-0">
                         <h6 class="text-primary">About Us</h6>
-                        <h1 class="mb-4">25+ Years Experience In Solar & Renewable Energy Industry</h1>
-                        <p>Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo erat amet</p>
-                        <p><i class="fa fa-check-circle text-primary me-3"></i>Diam dolor diam ipsum</p>
-                        <p><i class="fa fa-check-circle text-primary me-3"></i>Aliqu diam amet diam et eos</p>
-                        <p><i class="fa fa-check-circle text-primary me-3"></i>Tempor erat elitr rebum at clita</p>
+                        <h1 class="mb-4">Why Go Solar?</h1>
+                        <p>Sustainable & Renewable Energy</p>
+                        <p><i class="fa fa-check-circle text-primary me-3">xyzfd</i>Sustainable & Renewable Energy:</p><p>Solar energy is renewable and sustainable. Photovoltaic cells capture energy from the sun and convert it directly into electricity with no emissions or waste. This means that solar energy is a renewable energy source, meaning it will never run out</p>
+                        <p><i class="fa fa-check-circle text-primary me-3"></i>Safe & Reliable</p><p>Take Control of Your Power Production
+Solar energy is clean and green. Solar energy creates no air or water pollution, meaning it’s an environmentally friendly way to generate electricity. Solar panels don’t require any maintenance and can generate electricity even when the sun isn’t shining. This means that solar energy is a reliable source of power.</p>
+                        <p><i class="fa fa-check-circle text-primary me-3"></i>Great Savimgs & Return on Investment</p><p>Solar energy is cost-effective. Solar energy systems can reduce or eliminate electricity bills, depending on how much energy is generated and how much is used. In addition, solar energy doesn’t require ongoing fuel costs like other forms of energy. Solar energy can be used anywhere. Solar energy can be used to power homes, businesses and even remote areas that don’t have access to other forms of energy.</p>
                         <a href="" class="btn btn-primary rounded-pill py-3 px-5 mt-3">Explore More</a>
                     </div>
                 </div>
@@ -254,8 +255,13 @@
                             <div class="service-icon">
                                 <i class="fa fa-solar-panel fa-3x"></i>
                             </div>
-                            <h4 class="mb-3">Solar Panels</h4>
-                            <p>Stet stet justo dolor sed duo. Ut clita sea sit ipsum diam lorem diam.</p>
+                            <h4 class="mb-3">Residential & Commercial Systems Installations</h4>
+                            <p>Tested and Trusted quality to cover your energy demands for longer hours. We offer best in-class energy solutions for 
+				<i class="fa fa-check-circle text-primary me-3"> Homes </i> 
+				<i class="fa fa-check-circle text-primary me-3"> Offices </i> 
+				<i class="fa fa-check-circle text-primary me-3"> Pharmacies </i>
+				<i class="fa fa-check-circle text-primary me-3"> Hospitals </i> 
+				<i class="fa fa-check-circle text-primary me-3"> Schools and lots more.... </i> </p>
                             <a class="small fw-medium" href="">Read More<i class="fa fa-arrow-right ms-2"></i></a>
                         </div>
                     </div>
@@ -267,8 +273,16 @@
                             <div class="service-icon">
                                 <i class="fa fa-wind fa-3x"></i>
                             </div>
-                            <h4 class="mb-3">Wind Turbines</h4>
-                            <p>Stet stet justo dolor sed duo. Ut clita sea sit ipsum diam lorem diam.</p>
+                            <h4 class="mb-3"Accessories</h4>
+                            <p>We offer clean energy accessories such as
+
+				<p>-solar pumps</p>
+
+				<p>-solar streetlights</p>
+
+				<p>-solar water heaters</p>
+
+				<p>-solar charge controllers and lots more</p></p>
                             <a class="small fw-medium" href="">Read More<i class="fa fa-arrow-right ms-2"></i></a>
                         </div>
                     </div>
@@ -280,8 +294,8 @@
                             <div class="service-icon">
                                 <i class="fa fa-lightbulb fa-3x"></i>
                             </div>
-                            <h4 class="mb-3">Hydropower Plants</h4>
-                            <p>Stet stet justo dolor sed duo. Ut clita sea sit ipsum diam lorem diam.</p>
+                            <h4 class="mb-3">Maintenance & Support</h4>
+                            <p>We offer system maintenance, inverter repairs and energy consultations</p>
                             <a class="small fw-medium" href="">Read More<i class="fa fa-arrow-right ms-2"></i></a>
                         </div>
                     </div>
@@ -293,8 +307,9 @@
                             <div class="service-icon">
                                 <i class="fa fa-solar-panel fa-3x"></i>
                             </div>
-                            <h4 class="mb-3">Solar Panels</h4>
-                            <p>Stet stet justo dolor sed duo. Ut clita sea sit ipsum diam lorem diam.</p>
+                            <h4 class="mb-3">CCTV Installation</h4>
+                            <p> We provide a wide range of CCTV cameras, from basic analog cameras to the most advanced digital IP cameras.
+				Our CCTV systems provide businesses with a comprehensive security solution that is reliable, cost effective and easy to use. We also provide comprehensive maintenance and technical support services to ensure your system is always running optimally</p>
                             <a class="small fw-medium" href="">Read More<i class="fa fa-arrow-right ms-2"></i></a>
                         </div>
                     </div>
@@ -618,7 +633,7 @@
     <!-- Team End -->
 
 
-    <!-- Testimonial Start -->
+      <!-- Testimonial Start -->
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
