--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+	<style>#more {display: none;}</style>
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
@@ -116,7 +117,7 @@
     <!-- Carousel Start -->
     <div class="container-fluid p-0 pb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="owl-carousel header-carousel position-relative">
-            <div class="owl-carousel-item position-relative" data-dot="<img src='img/carousel-2.jpg'>">
+            <div class="owl-carousel-item position-relative" data-dot="<img src='img/carousel-1.jpg'>">
                 <img class="img-fluid" src="img/carousel-1.jpg" alt="">
                 <div class="owl-carousel-inner">
                     <div class="container">
@@ -227,11 +228,12 @@
                         <h6 class="text-primary">About Us</h6>
                         <h1 class="mb-4">Why Go Solar?</h1>
                         <p>Sustainable & Renewable Energy</p>
-                        <p><i class="fa fa-check-circle text-primary me-3">xyzfd</i>Sustainable & Renewable Energy:</p><p>Solar energy is renewable and sustainable. Photovoltaic cells capture energy from the sun and convert it directly into electricity with no emissions or waste. This means that solar energy is a renewable energy source, meaning it will never run out</p>
-                        <p><i class="fa fa-check-circle text-primary me-3"></i>Safe & Reliable</p><p>Take Control of Your Power Production
-Solar energy is clean and green. Solar energy creates no air or water pollution, meaning it’s an environmentally friendly way to generate electricity. Solar panels don’t require any maintenance and can generate electricity even when the sun isn’t shining. This means that solar energy is a reliable source of power.</p>
-                        <p><i class="fa fa-check-circle text-primary me-3"></i>Great Savimgs & Return on Investment</p><p>Solar energy is cost-effective. Solar energy systems can reduce or eliminate electricity bills, depending on how much energy is generated and how much is used. In addition, solar energy doesn’t require ongoing fuel costs like other forms of energy. Solar energy can be used anywhere. Solar energy can be used to power homes, businesses and even remote areas that don’t have access to other forms of energy.</p>
-                        <a href="" class="btn btn-primary rounded-pill py-3 px-5 mt-3">Explore More</a>
+                        <p><i class="fa fa-check-circle text-primary me-3">Sustainable & Renewable Energy</i>:</p><p>Solar energy is renewable and sustainable. Photovoltaic cells capture energy from the sun and convert it directly into electricity with no emissions or waste. This means that solar energy is a renewable energy source, meaning it will never run out</p>
+                        <p><i class="fa fa-check-circle text-primary me-3"><Safe & Reliable/i></p><p>Take control of your power production.Solar energy is clean and green. 
+				Solar energy creates no air or water pollution, meaning it’s an environmentally friendly way to generate electricity. Solar panels don’t require any maintenance and can generate electricity even when the sun isn’t shining. This means that solar energy is a reliable source of power.</p>
+                        <p><i class="fa fa-check-circle text-primary me-3">Great Savimgs & Return on Investment</i></p><p>Solar energy is cost-effective. Solar energy systems can reduce or eliminate electricity bills,<span id="dots">...</span><span id="more"> depending on how much energy is generated and how much is used. In addition, solar energy doesn’t require ongoing fuel costs like other forms of energy. Solar energy can be used anywhere. Solar energy can be used to power homes, businesses and even remote areas that don’t have access to other forms of energy.</span></p>
+                        <button onclick="showMoreFunction()" id="myBtn">Read more</button>
+			<a href="" class="btn btn-primary rounded-pill py-3 px-5 mt-3">Explore More</a>
                     </div>
                 </div>
             </div>
