--- a/index.html
+++ b/index.html
@@ -781,6 +781,23 @@
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
 
+	 <!--Javascript Read more function -->
+function showMoreFunction() {
+  var dots = document.getElementById("dots");
+  var moreText = document.getElementById("more");
+  var btnText = document.getElementById("myBtn");
+
+  if (dots.style.display === "none") {
+    dots.style.display = "inline";
+    btnText.innerHTML = "Read more";
+    moreText.style.display = "none";
+  } else {
+    dots.style.display = "none";
+    btnText.innerHTML = "Read less";
+    moreText.style.display = "inline";
+  }
+
+
     <!-- ReadMore Javascript -->
     <script>
         document.getElementById('read-more-button').addEventListener('click', function() {
