--- a/index.html
+++ b/index.html
@@ -225,15 +225,14 @@
                 </div>
                 <div class="col-lg-6 about-text py-5 wow fadeIn" data-wow-delay="0.5s">
                     <div class="p-lg-5 pe-lg-0">
-                        <h6 class="text-primary">About Us</h6>
+                        <h6 class="text-primary"></h6>
                         <h1 class="mb-4">Why Go Solar?</h1>
-                        <p>Sustainable & Renewable Energy</p>
                         <p><i class="fa fa-check-circle text-primary me-3">Sustainable & Renewable Energy</i>:</p><p>Solar energy is renewable and sustainable. Photovoltaic cells capture energy from the sun and convert it directly into electricity with no emissions or waste. This means that solar energy is a renewable energy source, meaning it will never run out</p>
-                        <p><i class="fa fa-check-circle text-primary me-3"><Safe & Reliable/i></p><p>Take control of your power production.Solar energy is clean and green. 
+                        <p><i class="fa fa-check-circle text-primary me-3">Safe & Reliable</i>:</p><p>Take control of your power production.Solar energy is clean and green. 
 				Solar energy creates no air or water pollution, meaning it’s an environmentally friendly way to generate electricity. Solar panels don’t require any maintenance and can generate electricity even when the sun isn’t shining. This means that solar energy is a reliable source of power.</p>
-                        <p><i class="fa fa-check-circle text-primary me-3">Great Savimgs & Return on Investment</i></p><p>Solar energy is cost-effective. Solar energy systems can reduce or eliminate electricity bills,<span id="dots">...</span><span id="more"> depending on how much energy is generated and how much is used. In addition, solar energy doesn’t require ongoing fuel costs like other forms of energy. Solar energy can be used anywhere. Solar energy can be used to power homes, businesses and even remote areas that don’t have access to other forms of energy.</span></p>
-                        <button onclick="showMoreFunction()" id="myBtn">Read more</button>
-			<a href="" class="btn btn-primary rounded-pill py-3 px-5 mt-3">Explore More</a>
+                        <p><i class="fa fa-check-circle text-primary me-3">Great Savings & Return on Investment</i>:</p><p>Solar energy is cost-effective. Solar energy systems can reduce or eliminate electricity bills,<span id="dots">...</span><span id="more"> depending on how much energy is generated and how much is used. In addition, solar energy doesn’t require ongoing fuel costs like other forms of energy. Solar energy can be used anywhere. Solar energy can be used to power homes, businesses and even remote areas that don’t have access to other forms of energy.</span></p>
+
+			<a href="#" onclick="showMoreFunction()" class="myBtn btn btn-primary rounded-pill py-3 px-5 mt-3">Explore More</a>
                     </div>
                 </div>
             </div>
@@ -247,7 +246,7 @@
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
                 <h6 class="text-primary">Our Services</h6>
-                <h1 class="mb-4">We Are Pioneers In The World Of Renewable Energy</h1>
+                <h1 class="mb-4">We Are Innovating For A Cleaner, Safer and Greener Future </h1>
             </div>
             <div class="row g-4">
                 <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.1s">
