--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-	<style>#more {display: none;}</style>
+	<style>#moreRead {display: none;}</style>
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
@@ -230,9 +230,9 @@
                         <p><i class="fa fa-check-circle text-primary me-3">Sustainable & Renewable Energy</i>:</p><p>Solar energy is renewable and sustainable. Photovoltaic cells capture energy from the sun and convert it directly into electricity with no emissions or waste. This means that solar energy is a renewable energy source, meaning it will never run out</p>
                         <p><i class="fa fa-check-circle text-primary me-3">Safe & Reliable</i>:</p><p>Take control of your power production.Solar energy is clean and green. 
 				Solar energy creates no air or water pollution, meaning it’s an environmentally friendly way to generate electricity. Solar panels don’t require any maintenance and can generate electricity even when the sun isn’t shining. This means that solar energy is a reliable source of power.</p>
-                        <p><i class="fa fa-check-circle text-primary me-3">Great Savings & Return on Investment</i>:</p><p>Solar energy is cost-effective. Solar energy systems can reduce or eliminate electricity bills,<span id="dots">...</span><span id="more"> depending on how much energy is generated and how much is used. In addition, solar energy doesn’t require ongoing fuel costs like other forms of energy. Solar energy can be used anywhere. Solar energy can be used to power homes, businesses and even remote areas that don’t have access to other forms of energy.</span></p>
+                        <p><i class="fa fa-check-circle text-primary me-3">Great Savings & Return on Investment</i>:</p><p>Solar energy is cost-effective. Solar energy systems can reduce or eliminate electricity bills,<span id="dots">...</span><span id="moreRead"> depending on how much energy is generated and how much is used. In addition, solar energy doesn’t require ongoing fuel costs like other forms of energy. Solar energy can be used anywhere. Solar energy can be used to power homes, businesses and even remote areas that don’t have access to other forms of energy.</span></p>
 
-			<a href="#" onclick="showMoreFunction()" class="myBtn btn btn-primary rounded-pill py-3 px-5 mt-3">Explore More</a>
+			<a href="" onclick="showMoreFunction()" class="myBtn btn btn-primary rounded-pill py-3 px-5 mt-3">Explore More</a>
                     </div>
                 </div>
             </div>
@@ -258,12 +258,13 @@
                             </div>
                             <h4 class="mb-3">Residential & Commercial Systems Installations</h4>
                             <p>Tested and Trusted quality to cover your energy demands for longer hours. We offer best in-class energy solutions for 
-				<i class="fa fa-check-circle text-primary me-3"> Homes </i> 
-				<i class="fa fa-check-circle text-primary me-3"> Offices </i> 
-				<i class="fa fa-check-circle text-primary me-3"> Pharmacies </i>
-				<i class="fa fa-check-circle text-primary me-3"> Hospitals </i> 
-				<i class="fa fa-check-circle text-primary me-3"> Schools and lots more.... </i> </p>
-                            <a class="small fw-medium" href="">Read More<i class="fa fa-arrow-right ms-2"></i></a>
+								<i class="fa me-3">  Homes </i> 
+								<i class="fa me-3"> Offices </i> 
+								<i class="fa me-3"> Pharmacies </i>
+								<i class="fa me-3"> Hospitals </i> 
+								<i class="fa me-3"> Schools and lots more.... </i> 
+							</p>
+							<a class="small fw-medium" href="">Read More<i class="fa fa-arrow-right ms-2"></i></a>
                         </div>
                     </div>
                 </div>
@@ -275,15 +276,12 @@
                                 <i class="fa fa-wind fa-3x"></i>
                             </div>
                             <h4 class="mb-3"Accessories</h4>
-                            <p>We offer clean energy accessories such as
-
-				<p>-solar pumps</p>
-
-				<p>-solar streetlights</p>
-
-				<p>-solar water heaters</p>
-
-				<p>-solar charge controllers and lots more</p></p>
+                            <p>We offer clean energy equipment and accessories such as
+								<i class="fa me-3">  Solar pumps </i> 
+								<i class="fa me-3"> Solar streetlights </i> 
+								<i class="fa me-3"> Solar water heaters </i>
+								<i class="fa me-3"> Solar charge controllers and lots more.... </i>
+							</p>
                             <a class="small fw-medium" href="">Read More<i class="fa fa-arrow-right ms-2"></i></a>
                         </div>
                     </div>
@@ -311,11 +309,11 @@
                             <h4 class="mb-3">CCTV Installation</h4>
                             <p> We provide a wide range of CCTV cameras, from basic analog cameras to the most advanced digital IP cameras.</p>
                             <a class="small fw-medium" id="read-more-button">Read More<i class="fa fa-arrow-right ms-2"></i></a>
-			    <p id="read-more-content">Our CCTV systems provide businesses with a comprehensive security solution that is reliable, cost effective and easy to use. We also provide comprehensive maintenance and technical support services to ensure your system is always running optimally</p>
+							<p id="read-more-content">Our CCTV systems provide businesses with a comprehensive security solution that is reliable, cost effective and easy to use. We also provide comprehensive maintenance and technical support services to ensure your system is always running optimally</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.3s">
+               	<!-- <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="service-item rounded overflow-hidden">
                         <img class="img-fluid" src="img/img-600x400-5.jpg" alt="">
                         <div class="position-relative p-4 pt-0">
@@ -339,7 +337,7 @@
                             <p>Stet stet justo dolor sed duo. Ut clita sea sit ipsum diam lorem diam.</p>
                             <a class="small fw-medium" href="">Read More<i class="fa fa-arrow-right ms-2"></i></a>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -353,10 +351,12 @@
             <div class="row g-0 mx-lg-0">
                 <div class="col-lg-6 feature-text py-5 wow fadeIn" data-wow-delay="0.1s">
                     <div class="p-lg-5 ps-lg-0">
-                        <h6 class="text-primary">Why Choose Us!</h6>
+                        <h6 class="text-primary">How Solar Energy Works!</h6>
                         <h1 class="mb-4">Complete Commercial & Residential Solar Systems</h1>
-                        <p class="mb-4 pb-2">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo erat amet</p>
-                        <div class="row g-4">
+                        <p class="mb-4 pb-2">Solar energy works by capturing the sun’s energy using photovoltaic (PV) cells in the solar panels. These cells are made up of semiconducting materials like silicon, which absorb the sunlight and convert it into electricity. The PV cells are connected to an inverter, which converts the direct current (DC) electricity produced by the solar cells into the alternating current (AC) electricity used in homes and businesses. The electricity is then sent to the electrical grid or stored in batteries for later use.
+							Solar energy systems can be installed on rooftops or in open areas and can be used to power homes, businesses, and even remote areas. Solar energy systems can also be combined with other energy sources, such as wind or geothermal, to form hybrid systems.
+							Energy solutions are recommended based on appliances to be powered. Reach out to us today, to discuss a solution for you</p>
+                       <!-- <div class="row g-4">
                             <div class="col-6">
                                 <div class="d-flex align-items-center">
                                     <div class="btn-lg-square bg-primary rounded-circle">
@@ -401,7 +401,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <div class="col-lg-6 pe-lg-0 wow fadeIn" data-wow-delay="0.5s" style="min-height: 400px;">
@@ -426,9 +426,9 @@
                 <div class="col-12 text-center">
                     <ul class="list-inline mb-5" id="portfolio-flters">
                         <li class="mx-2 active" data-filter="*">All</li>
-                        <li class="mx-2" data-filter=".first">Solar Panels</li>
+                   <!--     <li class="mx-2" data-filter=".first">Solar Panels</li>
                         <li class="mx-2" data-filter=".second">Wind Turbines</li>
-                        <li class="mx-2" data-filter=".third">Hydropower Plants</li>
+                        <li class="mx-2" data-filter=".third">Hydropower Plants</li>	-->
                     </ul>
                 </div>
             </div>
@@ -536,7 +536,7 @@
                     <div class="p-lg-5 pe-lg-0">
                         <h6 class="text-primary">Free Quote</h6>
                         <h1 class="mb-4">Get A Free Quote</h1>
-                        <p class="mb-4 pb-2">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo erat amet</p>
+                        <p class="mb-4 pb-2">Our customer service team is here to answer any questions, please use this form or contact us directly via email or phone.</p>
                         <form>
                             <div class="row g-3">
                                 <div class="col-12 col-sm-6">
@@ -551,9 +551,9 @@
                                 <div class="col-12 col-sm-6">
                                     <select class="form-select border-0" style="height: 55px;">
                                         <option selected>Select A Service</option>
-                                        <option value="1">Service 1</option>
-                                        <option value="2">Service 2</option>
-                                        <option value="3">Service 3</option>
+                                        <option value="1">General Inquiries</option>
+                                        <option value="2">Solar Inverter Installion</option>
+                                        <option value="3">CCTV Installation</option>
                                     </select>
                                 </div>
                                 <div class="col-12">
@@ -780,22 +780,25 @@
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
 
-	 <!--Javascript Read more function -->
-function showMoreFunction() {
-  var dots = document.getElementById("dots");
-  var moreText = document.getElementById("more");
-  var btnText = document.getElementById("myBtn");
+	<!--Javascript Read more function -->
+	<script>
+		function showMoreFunction() {
+			var dots = document.getElementById("dots");
+			var moreText = document.getElementById("moreRead");
+  			var btnText = document.getElementById("myBtn");
 
-  if (dots.style.display === "none") {
-    dots.style.display = "inline";
-    btnText.innerHTML = "Read more";
-    moreText.style.display = "none";
-  } else {
-    dots.style.display = "none";
-    btnText.innerHTML = "Read less";
-    moreText.style.display = "inline";
-  }
-}
+			if (dots.style.display === "none") {
+   				 dots.style.display = "inline";
+   				 btnText.innerHTML = "Read more";
+   				 moreText.style.display = "none";
+ 				 } else {
+					 dots.style.display = "none";
+					 btnText.innerHTML = "Read less";
+					 moreText.style.display = "inline";
+				 }
+		}
+	</script>
+ 
 
 </body>
 
