--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                         <img class="img-fluid" src="img/img-600x400-1.jpg" alt="">
                         <div class="position-relative p-4 pt-0">
                             <div class="service-icon">
-                                <i class="fa fa-solar-panel fa-3x"></i>
+                                <i class="fa fa-building fa-3x"></i>
                             </div>
                             <h4 class="mb-3">Residential & Commercial Systems Installations</h4>
                             <p>Tested and Trusted quality to cover your energy demands for longer hours. We offer best in-class energy solutions for 
@@ -273,15 +273,16 @@
                         <img class="img-fluid" src="img/img-600x400-2.jpg" alt="">
                         <div class="position-relative p-4 pt-0">
                             <div class="service-icon">
-                                <i class="fa fa-wind fa-3x"></i>
+                                <i class="fa fa-solar-panel fa-3x"></i>
                             </div>
                             <h4 class="mb-3"Accessories</h4>
-                            <p>We offer clean energy equipment and accessories such as
-								<i class="fa me-3">  Solar pumps </i> 
-								<i class="fa me-3"> Solar streetlights </i> 
-								<i class="fa me-3"> Solar water heaters </i>
-								<i class="fa me-3"> Solar charge controllers and lots more.... </i>
-							</p>
+                            <p>We offer clean energy equipment and accessories such as  
+				    <i class="fa me-3">  Solar panels </i> 
+				    <i class="fa me-3">  Solar pumps </i>
+				    <i class="fa me-3"> Solar streetlights </i>
+				    <i class="fa me-3"> Solar water heaters </i>
+				    <i class="fa me-3"> Solar charge controllers and lots more.... </i>
+				</p>
                             <a class="small fw-medium" href="">Read More<i class="fa fa-arrow-right ms-2"></i></a>
                         </div>
                     </div>
@@ -291,7 +292,7 @@
                         <img class="img-fluid" src="img/img-600x400-3.jpg" alt="">
                         <div class="position-relative p-4 pt-0">
                             <div class="service-icon">
-                                <i class="fa fa-lightbulb fa-3x"></i>
+                                <i class="fa fa-tools fa-3x"></i>
                             </div>
                             <h4 class="mb-3">Maintenance & Support</h4>
                             <p>We offer system maintenance, inverter repairs and energy consultations</p>
@@ -304,7 +305,7 @@
                         <img class="img-fluid" src="img/img-600x400-4.jpg" alt="">
                         <div class="position-relative p-4 pt-0" id="read-more-container">
                             <div class="service-icon">
-                                <i class="fa fa-solar-panel fa-3x"></i>
+                                <i class="fa fa-video fa-3x"></i>
                             </div>
                             <h4 class="mb-3">CCTV Installation</h4>
                             <p> We provide a wide range of CCTV cameras, from basic analog cameras to the most advanced digital IP cameras.</p>
