--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
         <link rel="icon" type="image/png" sizes="16x16" src="img/favicon_io/favicon-16x16.png">
         <link rel="manifest" src="img/favicon_io/site.webmanifest">
         <a href="index.html" class="navbar-brand d-flex align-items-center border-end px-4 px-lg-5">
-            <h2 class="m-0 text-primaryb">Nooq 7Energy</h2>
+		<img class="img-fluid" src="img/Logo.jpg" alt="Nooq 7Energy">
+          <!--  <h2 class="m-0 text-primaryb">Nooq 7Energy</h2> -->
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -123,8 +124,8 @@
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
-                                <h1 class="display-2 text-white animated slideInDown">Pioneers Of Solar And Renewable Energy</h1>
-                                <p class="fs-5 fw-medium text-white mb-4 pb-3">Vero elitr justo clita lorem. Ipsum dolor at sed stet sit diam no. Kasd rebum ipsum et diam justo clita et kasd rebum sea elitr.</p>
+                                <h1 class="display-2 text-white animated slideInDown">It's time to GO SOLAR!</h1>
+                                <p class="fs-5 fw-medium text-white mb-4 pb-3"> Generate and store your own power. Start saving today using clean and eco-friendly energy</p>
                                 <a href="" class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft">Read More</a>
                             </div>
                         </div>
@@ -275,7 +276,7 @@
                             <div class="service-icon">
                                 <i class="fa fa-solar-panel fa-3x"></i>
                             </div>
-                            <h4 class="mb-3"Accessories</h4>
+                            <h4 class="mb-3">Accessories</h4>
                             <p>We offer clean energy equipment and accessories such as  
 				    <i class="fa me-3">  Solar panels </i> 
 				    <i class="fa me-3">  Solar pumps </i>
@@ -352,8 +353,8 @@
             <div class="row g-0 mx-lg-0">
                 <div class="col-lg-6 feature-text py-5 wow fadeIn" data-wow-delay="0.1s">
                     <div class="p-lg-5 ps-lg-0">
-                        <h6 class="text-primary">How Solar Energy Works!</h6>
-                        <h1 class="mb-4">Complete Commercial & Residential Solar Systems</h1>
+                        <h6 class="text-primary"></h6>
+                        <h1 class="mb-4">How Solar Energy works</h1>
                         <p class="mb-4 pb-2">Solar energy works by capturing the sun’s energy using photovoltaic (PV) cells in the solar panels. These cells are made up of semiconducting materials like silicon, which absorb the sunlight and convert it into electricity. The PV cells are connected to an inverter, which converts the direct current (DC) electricity produced by the solar cells into the alternating current (AC) electricity used in homes and businesses. The electricity is then sent to the electrical grid or stored in batteries for later use.
 							Solar energy systems can be installed on rooftops or in open areas and can be used to power homes, businesses, and even remote areas. Solar energy systems can also be combined with other energy sources, such as wind or geothermal, to form hybrid systems.
 							Energy solutions are recommended based on appliances to be powered. Reach out to us today, to discuss a solution for you</p>
