--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="col-lg-7 px-5 text-start">
                 <div class="h-100 d-inline-flex align-items-center me-4">
                     <small class="fa fa-map-marker-alt text-primary me-2"></small>
-                    <small>123 Street, New York, USA</small>
+                    <small class= "top-nav-bar">123 Street, New York, USA</small>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center">
                     <small class="far fa-clock text-primary me-2"></small>
@@ -233,7 +233,7 @@
 				Solar energy creates no air or water pollution, meaning it’s an environmentally friendly way to generate electricity. Solar panels don’t require any maintenance and can generate electricity even when the sun isn’t shining. This means that solar energy is a reliable source of power.</p>
                         <p><i class="fa fa-check-circle text-primary me-3">Great Savings & Return on Investment</i>:</p><p>Solar energy is cost-effective. Solar energy systems can reduce or eliminate electricity bills,<span id="dots">...</span><span id="moreRead"> depending on how much energy is generated and how much is used. In addition, solar energy doesn’t require ongoing fuel costs like other forms of energy. Solar energy can be used anywhere. Solar energy can be used to power homes, businesses and even remote areas that don’t have access to other forms of energy.</span></p>
 
-			<a href="" onclick="showMoreFunction()" class="myBtn btn btn-primary rounded-pill py-3 px-5 mt-3">Explore More</a>
+			<a  onclick="showMoreFunction()" id= "myBtn" class="btn btn-primary rounded-pill py-3 px-5 mt-3">Explore More</a>
                     </div>
                 </div>
             </div>
@@ -695,8 +695,8 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-white mb-4">Address</h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Satellite town, Amuwo Odofin Lagos, Nigeria</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+(234)705-632-5088</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-square btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
