--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="col-lg-7 px-5 text-start">
                 <div class="h-100 d-inline-flex align-items-center me-4">
                     <small class="fa fa-map-marker-alt text-primary me-2"></small>
-                    <small class= "top-nav-bar"> Amuwo Odofin, Lagos, Nigerian/small>
+                    <small class= "top-nav-bar"> Amuwo Odofin, Lagos, Nigerian</small>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center">
                     <small class="far fa-clock text-primary me-2"></small>
@@ -63,13 +63,13 @@
             <div class="col-lg-5 px-5 text-end">
                 <div class="h-100 d-inline-flex align-items-center me-4">
                     <small class="fa fa-phone-alt text-primary me-2"></small>
-                    <small style= "color:white" >+(234) 705-632-5088</small>
+                    <small style="color:white">+(234) 705-632-5088</small>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center mx-n2">
-                    <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" style= "color:FF4500" href=""><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" style= "color:FF4500" href=""><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" style= "color:FF4500" href=""><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-square btn-link rounded-0" style= "color:FF4500" href=""><i class="fab fa-instagram"></i></a>
+                    <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" style="color:orangered" href=""><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" style="color:orangered" href=""><i class="fab fa-twitter"></i></a>
+                    <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" style="color:white" href=""><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-square btn-link rounded-0" style= "color:orangered" href=""><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
         </div>
@@ -85,7 +85,7 @@
         <link rel="icon" type="image/png" sizes="16x16" src="img/favicon_io/favicon-16x16.png">
         <link rel="manifest" src="img/favicon_io/site.webmanifest">
         <a href="index.html" class="navbar-brand d-flex align-items-center border-end px-4 px-lg-5">
-		<img class="img-fluid" src="img/Logo.jpg" alt="Nooq 7Energy">
+		<img class="img-fluid" style= "padding-top:0.3125; padding bottom:0.3125" src="img/Logo.jpg" alt="Nooq 7Energy">
           <!--  <h2 class="m-0 text-primaryb">Nooq 7Energy</h2> -->
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
