--- a/index.html
+++ b/index.html
@@ -228,12 +228,13 @@
                     <div class="p-lg-5 pe-lg-0">
                         <h6 class="text-primary"></h6>
                         <h1 class="mb-4">Why Go Solar?</h1>
-                        <p><i class="fa fa-check-circle text-primary me-3">Sustainable & Renewable Energy</i>:</p><p>Solar energy is renewable and sustainable. Photovoltaic cells capture energy from the sun and convert it directly into electricity with no emissions or waste. This means that solar energy is a renewable energy source, meaning it will never run out</p>
+                        <p><i class="fa fa-check-circle text-primary me-3">Sustainable & Renewable Energy</i>:</p><p>Solar energy is renewable and sustainable. Photovoltaic cells capture energy from the sun and convert it directly into electricity with no emissions or waste.<span id="dots">...</span><span id="moreRead"> This means that solar energy is a renewable energy source, meaning it will never run out</span> 
+			<a  onclick="showMoreFunction()" id= "myBtn" class="btn btn-primary rounded-pill py-1 px-3 mt-3">Read More</a></p>
                         <p><i class="fa fa-check-circle text-primary me-3">Safe & Reliable</i>:</p><p>Take control of your power production.Solar energy is clean and green. 
-				Solar energy creates no air or water pollution, meaning it’s an environmentally friendly way to generate electricity. Solar panels don’t require any maintenance and can generate electricity even when the sun isn’t shining. This means that solar energy is a reliable source of power.</p>
+				Solar energy creates no air or water pollution, meaning it’s an environmentally friendly way to generate electricity.<span id="dots">...</span><span id="moreRead"> Solar panels don’t require any maintenance and can generate electricity even when the sun isn’t shining. This means that solar energy is a reliable source of power.</p></span>
                         <p><i class="fa fa-check-circle text-primary me-3">Great Savings & Return on Investment</i>:</p><p>Solar energy is cost-effective. Solar energy systems can reduce or eliminate electricity bills,<span id="dots">...</span><span id="moreRead"> depending on how much energy is generated and how much is used. In addition, solar energy doesn’t require ongoing fuel costs like other forms of energy. Solar energy can be used anywhere. Solar energy can be used to power homes, businesses and even remote areas that don’t have access to other forms of energy.</span></p>
 
-			<a  onclick="showMoreFunction()" id= "myBtn" class="btn btn-primary rounded-pill py-3 px-5 mt-3">Explore More</a>
+			<a  onclick="showMoreFunction()" id= "myBtn" class="btn btn-primary rounded-pill py-3 px-5 mt-3">Read More</a>
                     </div>
                 </div>
             </div>
