--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
-                                <h1 class="display-2 text-white animated slideInDown">It's time to GO SOLAR!</h1>
+                                <h1 class="display-2 text-white animated slideInDown">It's Time To GO SOLAR!</h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-3"> Generate and store your own power. Start saving today using clean and eco-friendly energy</p>
                                 <a href="" class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft">Read More</a>
                             </div>
@@ -138,7 +138,7 @@
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
-                                <h1 class="display-2 text-white animated slideInDown">Powering Up with Renewable Energy: Secure Your Future Today</h1>
+                                <h1 class="display-2 text-white animated slideInDown">Powering Up With Renewable Energy: Secure Your Future Today</h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-3">We are leading the charge for renewable energy penetration into the rural communities</p>
                                 <a href="" class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft">Read More</a>
                             </div>
@@ -229,7 +229,6 @@
                         <h6 class="text-primary"></h6>
                         <h1 class="mb-4">Why Go Solar?</h1>
                         <p><i class="fa fa-check-circle text-primary me-3">Sustainable & Renewable Energy</i>:</p><p>Solar energy is renewable and sustainable. Photovoltaic cells capture energy from the sun and convert it directly into electricity with no emissions or waste.<span id="dots">...</span><span id="moreRead"> This means that solar energy is a renewable energy source, meaning it will never run out</span> 
-
                         <p><i class="fa fa-check-circle text-primary me-3">Safe & Reliable</i>:</p><p>Take control of your power production.Solar energy is clean and green. 
 				Solar energy creates no air or water pollution, meaning it’s an environmentally friendly way to generate electricity.<span id="dots">...</span><span id="moreRead"> Solar panels don’t require any maintenance and can generate electricity even when the sun isn’t shining. This means that solar energy is a reliable source of power.</p></span>
                         <p><i class="fa fa-check-circle text-primary me-3">Great Savings & Return on Investment</i>:</p><p>Solar energy is cost-effective. Solar energy systems can reduce or eliminate electricity bill and power remote areas that don’t have access to other forms of energy</p>
@@ -260,12 +259,14 @@
                             </div>
                             <h4 class="mb-3">Residential & Commercial Systems Installations</h4>
                             <p>Tested and Trusted quality to cover your energy demands for longer hours. We offer best in-class energy solutions for 
-								<i class="fa me-3">  Homes </i> 
+							<ul>
+	                                                        <i class="fa me-3">  Homes </i> 
 								<i class="fa me-3"> Offices </i> 
 								<i class="fa me-3"> Pharmacies </i>
 								<i class="fa me-3"> Hospitals </i> 
 								<i class="fa me-3"> Schools and lots more.... </i> 
-							</p>
+							</ul>
+                                                      </p>
 							<a class="small fw-medium" href="">Read More<i class="fa fa-arrow-right ms-2"></i></a>
                         </div>
                     </div>
@@ -277,13 +278,15 @@
                             <div class="service-icon">
                                 <i class="fa fa-solar-panel fa-3x"></i>
                             </div>
-                            <h4 class="mb-3">Accessories</h4>
-                            <p>We offer clean energy equipment and accessories such as  
+                            <h4 class="mb-3">Solar Accessories & Appliances</h4>
+                            <p>We offer clean energy equipment and accessories such as 
+                               <ul>  
 				    <i class="fa me-3">  Solar panels </i> 
 				    <i class="fa me-3">  Solar pumps </i>
 				    <i class="fa me-3"> Solar streetlights </i>
 				    <i class="fa me-3"> Solar water heaters </i>
 				    <i class="fa me-3"> Solar charge controllers and lots more.... </i>
+                               </ul>
 				</p>
                             <a class="small fw-medium" href="">Read More<i class="fa fa-arrow-right ms-2"></i></a>
                         </div>
@@ -311,7 +314,6 @@
                             </div>
                             <h4 class="mb-3">CCTV Installation</h4>
                             <p> We provide a wide range of CCTV cameras, from basic analog cameras to the most advanced digital IP cameras.</p>
-                            <a class="small fw-medium" id="read-more-button">Read More<i class="fa fa-arrow-right ms-2"></i></a>
 							<p id="read-more-content">Our CCTV systems provide businesses with a comprehensive security solution that is reliable, cost effective and easy to use. We also provide comprehensive maintenance and technical support services to ensure your system is always running optimally</p>
                         </div>
                     </div>
