--- a/about.html
+++ b/about.html
@@ -187,13 +187,9 @@
                 </div>-->
                 <div class="col-lg-6 about-text py-5 wow fadeIn" data-wow-delay="0.5s">
                     <div class="p-lg-5 ">
-                        <h6 class="text-primary">Mission</h6>
-                        <h1 class="mb-4">25+ Years Experience In Solar & Renewable Energy Industry</h1>
-                        <p>Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo erat amet</p>
-                        <p><i class="fa fa-check-circle text-primary me-3"></i>Diam dolor diam ipsum</p>
-                        <p><i class="fa fa-check-circle text-primary me-3"></i>Aliqu diam amet diam et eos</p>
-                        <p><i class="fa fa-check-circle text-primary me-3"></i>Tempor erat elitr rebum at clita</p>
-                        <a href="" class="btn btn-primary rounded-pill py-3 px-5 mt-3">Explore More</a>
+                        <h6 class="text-primary"></h6>
+                        <h1 class="mb-4">About Us</h1>
+                        <p>Nooq7 Energy was created with the purpose to serve the power needs of everyday home, businesses and facilities with clean and smart energy alternatives to improve everyday living for a better future. We specialize in sales, design, procurement, construction, installation and maintenance of solar power systems. Since inception, our client spans across home, corporate businesses, rural farmers and everything in between while our primary focus still remains on the under served. Nooq7 Energy is here to serve you. We understand how important quality and reliability is to your business. As your supplier and service providers, we make sure that everything we offer is of the highest quality available, affordable, and that you get what you need when you need. Our reputation depends on it, and in our industry, reputation is everything! If you would like to find out more about how Nooq7 Energy can serve your construction needs, get in touch today.</p>                  
                     </div>
                 </div>
 		
@@ -213,24 +209,27 @@
                 </div>-->
                 <div class="col-lg-6 about-text py-5 wow fadeIn" data-wow-delay="0.5s">
                     <div class="p-lg-5 pe-lg-0">
-                        <h6 class="text-primary">Mission</h6>
-                        <h1 class="mb-4">25+ Years Experience In Solar & Renewable Energy Industry</h1>
-                        <p>Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo erat amet</p>
-                        <p><i class="fa fa-check-circle text-primary me-3"></i>Diam dolor diam ipsum</p>
-                        <p><i class="fa fa-check-circle text-primary me-3"></i>Aliqu diam amet diam et eos</p>
-                        <p><i class="fa fa-check-circle text-primary me-3"></i>Tempor erat elitr rebum at clita</p>
-                        <a href="" class="btn btn-primary rounded-pill py-3 px-5 mt-3">Explore More</a>
+                        <h6 class="text-primary"></h6>
+                        <h1 class="mb-4">Mission</h1>
+                        <p>Our mission is to create a clean, sustainable, and affordable energy future for all by developing and deploying renewable energy solutions. We strive to provide reliable, cost-efficient energy solutions that will help reduce energy costs and environmental impacts while creating a more resilient, secure energy grid. We are committed to helping communities and businesses move away from fossil fuels and towards a cleaner, more sustainable energy future</p>
                     </div>
                 </div>
 		<div class="col-lg-6 about-text py-5 wow fadeIn" data-wow-delay="0.5s">
                     <div class="p-lg-5 pe-lg-0">
                         <h6 class="text-primary">Vision</h6>
                         <h1 class="mb-4">25+ Years Experience In Solar & Renewable Energy Industry</h1>
-                        <p>Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo erat amet</p>
-                        <p><i class="fa fa-check-circle text-primary me-3"></i>Diam dolor diam ipsum</p>
-                        <p><i class="fa fa-check-circle text-primary me-3"></i>Aliqu diam amet diam et eos</p>
-                        <p><i class="fa fa-check-circle text-primary me-3"></i>Tempor erat elitr rebum at clita</p>
-                        <a href="" class="btn btn-primary rounded-pill py-3 px-5 mt-3">Explore More</a>
+                        <p>Our vision is to be the leading provider of renewable energy solutions that reduce energy costs, protect the environment, and help build a more secure and resilient energy future</p>
+                   
+                    </div>
+                </div>
+		<div class="col-lg-6 about-text py-5 wow fadeIn" data-wow-delay="0.5s">
+                    <div class="p-lg-5 pe-lg-0">
+                        <h6 class="text-primary"></h6>
+                        <h1 class="mb-4">Core Values</h1>
+                        <p>Quality: Delivering the highest quality products and services.</p>
+			<p> Integrity: Doing the right thing and taking responsibility for your actions.</p>
+			<p>Innovation: Encouraging creative thinking to find new solutions.</p>
+			<p>Collaboration: Working together to achieve shared objectives.</p>
                     </div>
                 </div>
             </div>
