--- a/about.html
+++ b/about.html
@@ -216,8 +216,8 @@
                 </div>
 		<div class="col-lg-6 about-text py-5 wow fadeIn" data-wow-delay="0.5s">
                     <div class="p-lg-5 pe-lg-0">
-                        <h6 class="text-primary">Vision</h6>
-                        <h1 class="mb-4">25+ Years Experience In Solar & Renewable Energy Industry</h1>
+                        <h6 class="text-primary"></h6>
+                        <h1 class="mb-4">Vision</h1>
                         <p>Our vision is to be the leading provider of renewable energy solutions that reduce energy costs, protect the environment, and help build a more secure and resilient energy future</p>
                    
                     </div>
