--- a/about.html
+++ b/about.html
@@ -177,14 +177,14 @@
 	
 	<!-- Why Us Start -->
 	
-     <div class="container-fluid bg-light overflow-hidden my-5 px-lg-0">
+     <div class="container-fluid overflow-hidden my-5 px-lg-0">
         <div class="container about px-lg-0">
             <div class="row g-0 mx-lg-0">
-                <!--<div class="col-lg-6 ps-lg-0 wow fadeIn" data-wow-delay="0.1s" style="min-height: 400px;">
+                <div class="col-lg-6 ps-lg-0 wow fadeIn" data-wow-delay="0.1s" style="min-height: 400px;">
                     <div class="position-relative h-100">
-                        <img class="position-absolute img-fluid w-100 h-100" src="img/about.jpg" style="object-fit: cover;" alt="">
+                        <img class="position-absolute img-fluid w-100 h-100" src="img/Logo.jpg" style="object-fit: cover;" alt="">
                     </div>
-                </div>-->
+                </div>
                 <div class="col-lg-6 about-text py-5 wow fadeIn" data-wow-delay="0.5s">
                     <div class="p-lg-5 ">
                         <h6 class="text-primary"></h6>
@@ -199,22 +199,22 @@
 
 	<!-- Why Us End -->
     <!-- About Start -->
-    <div class="container-fluid bg-light overflow-hidden my-5 px-lg-0">
+    <div class="container-fluid overflow-hidden my-5 px-lg-0">
         <div class="container about px-lg-0">
             <div class="row g-0 mx-lg-0">
-                <!--<div class="col-lg-6 ps-lg-0 wow fadeIn" data-wow-delay="0.1s" style="min-height: 400px;">
+                <!--<div class="col-lg-6a ps-lg-0 wow fadeIn" data-wow-delay="0.1s" style="min-height: 400px;">
                     <div class="position-relative h-100">
                         <img class="position-absolute img-fluid w-100 h-100" src="img/about.jpg" style="object-fit: cover;" alt="">
                     </div>
                 </div>-->
-                <div class="col-lg-6 about-text py-5 wow fadeIn" data-wow-delay="0.5s">
+                <div class="col-lg-6a bg-blue about-text py-5 wow fadeIn" data-wow-delay="0.5s">
                     <div class="p-lg-5 pe-lg-0">
                         <h6 class="text-primary"></h6>
                         <h1 class="mb-4">Mission</h1>
                         <p>Our mission is to create a clean, sustainable, and affordable energy future for all by developing and deploying renewable energy solutions. We strive to provide reliable, cost-efficient energy solutions that will help reduce energy costs and environmental impacts while creating a more resilient, secure energy grid. We are committed to helping communities and businesses move away from fossil fuels and towards a cleaner, more sustainable energy future</p>
                     </div>
                 </div>
-		<div class="col-lg-6 about-text py-5 wow fadeIn" data-wow-delay="0.5s">
+		<div class="col-lg-6a bg-blue about-text py-5 wow fadeIn" data-wow-delay="0.5s">
                     <div class="p-lg-5 pe-lg-0">
                         <h6 class="text-primary"></h6>
                         <h1 class="mb-4">Vision</h1>
@@ -222,7 +222,7 @@
                    
                     </div>
                 </div>
-		<div class="col-lg-6 about-text py-5 wow fadeIn" data-wow-delay="0.5s">
+		<div class="col-lg-6a bg-blue about-text py-5 wow fadeIn" data-wow-delay="0.5s">
                     <div class="p-lg-5 pe-lg-0">
                         <h6 class="text-primary"></h6>
                         <h1 class="mb-4">Core Values</h1>
